--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .backest {
@@ -30,10 +30,11 @@
 }
 
 .randomButton {
-    background: whitesmoke;
+    background: rgba(240, 240, 240, 0.529);
     border-radius: 10px;
     width: 3em;
     height: 3em;
+    g
 }
 
 .rotate:hover {
@@ -49,4 +50,11 @@
     to {
         transform: rotate(359deg);
     }
+}
+
+.adviseText,
+.adviseNumber {
+    color: white;
+    font-size: larger;
+    font-weight: 200;
 }
